force-app/main/default/objects/Account/fields/Charity_Number__c.field-meta.xml
<CustomField>
    <fullName>Charity_Number__c</fullName>
    <description>Charity Number from Charities Commission</description>
    <label>Charity Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>