force-app/main/default/objects/Account/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <description>Registration number at Companies House</description>
    <label>Company Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>