force-app/main/default/objects/Account/fields/Date_Of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Creation__c</fullName>
    <label>Date Of Creation</label>
    <type>Date</type>
</CustomField>