force-app/main/default/objects/Account/fields/Last_Companies_House_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Companies_House_Check_Date__c</fullName>
    <label>Last Companies House Check Date</label>
    <type>DateTime</type>
</CustomField>