force-app/main/default/objects/Account/fields/Primary_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source_of_Income__c</fullName>
    <label>Primary Source of Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Voluntary - grants</fullName>
            </value>
            <value>
                <fullName>Voluntary - other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>