force-app/main/default/objects/Account/recordTypes/Investee_Account.recordType-meta.xml
<RecordType>
    <fullName>Investee_Account</fullName>
    <active>true</active>
    <label>Investee Account</label>
</RecordType>