force-app/main/default/objects/Account/recordTypes/Other_Account.recordType-meta.xml
<RecordType>
    <fullName>Other_Account</fullName>
    <active>true</active>
    <description>Any other account (partner, mentor, investor, etc)</description>
    <label>Other Account</label>
</RecordType>